--- a/cart.html
+++ b/cart.html
@@ -105,12 +105,12 @@
 				        			<li class="cart-panel-qty">QTY</li>
 				        			<li class="cart-panel-subtotal">Subtotal</li>
 				        		</ul>
-				        		<div class="cart-panel-body">
-				        			<ul class="cart-product">
-				        				<li class="cart-product-img">
+				        		<ul class="cart-panel-body">
+				        			<li class="cart-product">
+				        				<div class="cart-product-img">
 				        					<img src="img/" alt="some image" />
-				        				</li>
-				        				<li class="cart-product-description">
+				        				</div>
+				        				<div class="cart-product-description">
 				        					<a class="cart-product-name" href="#">OG SCALLOP SOLID</a>
 				        					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
 				        					<ul class="cart-product-social">
@@ -118,25 +118,25 @@
 												<li><a class="fa fa-twitter" href="#"></a></li>
 												<li><a class="fa fa-pinterest" href="#"></a></li>
 				        					</ul>
-				        				</li>
-				        				<li class="cart-product-price">
-				        					<p class="shop-price">749.50</p>
-				        				</li>
-				        				<li class="cart-product-total">
+				        				</div>
+				        				<div class="cart-product-price">
+				        					<p class="shop-price">&#8364;.749.50</p>
+				        				</div>
+				        				<div class="cart-product-total">
 				        					<button class="total-decrease"></button>
 				        					<input type="text" value="1" />
 				        					<button class="total-increase"></button>
-				        				</li>
-				        				<li class="cart-product-subtotal">
-				        					<p class="shop-price">749.50</p>
+				        				</div>
+				        				<div class="cart-product-subtotal">
+				        					<p class="shop-price">&#8364;.749.50</p>
 				        					<button class="cart-product-close"></button>
-				        				</li>
-				        			</ul>
-				        			<ul class="cart-product">
-				        				<li class="cart-product-img">
+				        				</div>
+				        			</li>
+				        			<li class="cart-product">
+				        				<div class="cart-product-img">
 				        					<img src="" alt="some image" />
-				        				</li>
-				        				<li class="cart-product-description">
+				        				</div>
+				        				<div class="cart-product-description">
 				        					<a class="cart-product-name" href="#">OG SCALLOP SOLID</a>
 				        					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
 				        					<ul class="cart-product-social">
@@ -144,26 +144,26 @@
 												<li><a class="fa fa-twitter" href="#"></a></li>
 												<li><a class="fa fa-pinterest" href="#"></a></li>
 				        					</ul>
-				        				</li>
-				        				<li class="cart-product-price">
-				        					<p class="shop-price">749.50</p>
-				        				</li>
-				        				<li class="cart-product-total">
+				        				</div>
+				        				<div class="cart-product-price">
+				        					<p class="shop-price">&#8364;.749.50</p>
+				        				</div>
+				        				<div class="cart-product-total">
 				        					<button class="total-decrease"></button>
 				        					<input type="text" value="1" />
 				        					<button class="total-increase"></button>
-				        				</li>
-				        				<li class="cart-product-subtotal">
-				        					<p class="shop-price">749.50</p>
+				        				</div>
+				        				<div class="cart-product-subtotal">
+				        					<p class="shop-price">&#8364;.749.50</p>
 				        					<button class="cart-product-close"></button>
-				        				</li>
-				        			</ul>
-				        		</div>
+				        				</div>
+				        			</li>
+				        		</ul>
 				        		<div class="product-coupon">
 					        		<h3>Have you got a coupon code?</h3>
 					        		<input type="text" placeholder="INSERT CODE" />
 					        		<span class="f-right">
-					        			<button>Update shopping cart</button>
+					        			<input class="button" type="submit" value="Update shopping cart" />
 					        			<a class="product-coupon-link" href="#">or continue shopping</a>
 					        		</span>
 					        	</div>
@@ -176,7 +176,7 @@
 					        		<li>vat <span class="shop-price">112.20</span></li>
 					        		<li class="checkout-order">Order total <span class="shop-price">1,511.70</span></li>
 					        	</ul>
-				        		<button class="checkout-button">Checkout</button>
+				        		<button class="button checkout-button">Checkout</button>
 				        	</div>
 				        </div>
 				        <div class="basket-tab hidden"></div>
@@ -186,121 +186,121 @@
 					<div class="shop clearfix">
 						<section class="also-like">
 							<h2>You might also like</h2>
-							<div class="coloring-slider">
-								<figure class="shop-item mark">
+							<ul class="coloring-slider">
+								<li class="shop-item mark">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/cart_09.jpg" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
 												<p class="shop-price f-right">865.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item mark mark-hot">
+								</li>
+								<li class="shop-item mark mark-hot">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
-												<p class="shop-price">770.50</p>
+												<p class="shop-price">&#8364;.770.50</p>
 												<p class="shop-price shop-old-price">1,270,15</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
+								</li>
 								<div class="coloring-slider-arrow">
 				                	<button class="coloring-slider-prev"></button>
 				                	<button class="coloring-slider-next"></button>
 				              	</div>
-							</div>
+							</ul>
 						</section>
 						<section class="recently-viewed">
 							<h2>Recently viewed</h2>
-							<div class="coloring-slider">
-								<figure class="shop-item">
+							<ul class="coloring-slider">
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Oq scallop solid</p>
-												<div class="f-right">
-												<p class="shop-price">765.00</p>
+											<div class="f-right">
+												<p class="shop-price">&#8364;.765.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Stripe 19 qs</p>
 											<div class="f-right">
-												<p class="shop-price">230.50</p>
+												<p class="shop-price">&#8364;.230.50</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Yoke 19 qs</p>
 											<div class="f-right">
-												<p class="shop-price">1.130.70</p>
+												<p class="shop-price">&#8364;.1.130.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>	
-								<figure class="shop-item">
+								</li>	
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
+								</i>
 								<div class="coloring-slider-arrow">
 				                	<button class="coloring-slider-prev"></button>
 				                	<button class="coloring-slider-next"></button>
@@ -360,10 +360,10 @@
 					<li class="newsletter">
 						<h4>Newsletter</h4>
 						<p class="footer-text">Join thousanda of other people subscribe to our job.</p>
-						<div class="footer-email">
+						<form class="footer-email">
                             <input type="email" value="Insert Email" />
                             <input type="submit" value="submit" />
-               			 </div>
+               			</form>
 						<ul class="pay-card">
 							<li class="american-express"><a href="#"></a></li>
 							<li class="mastercard"><a href="#"></a></li>
@@ -383,7 +383,7 @@
 			</div>
 			<div class="copyright clearfix">
 				<div class="content">
-					<p class="f-left"><span>&copy; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
+					<p class="f-left"><span>&#169; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
