--- a/home.html
+++ b/home.html
@@ -48,34 +48,34 @@
 				                      	<span class="final-price">$1,459.50</span> 
 				                      	<a href="#">2 items</a>
 				                	</span>
-			                        <ul class="cart-edit f-right">
-			                            <li class="close"><a href="#"></a></li>
-			                            <li><a href="#">edit</a></li>
-			                        </ul>
+			                        <span class="cart-edit f-right">
+			                            <span class="close"><a href="#"></a></span>
+			                            <span><a href="#">edit</a></span>
+			                        </span>
 			                    </div>
 			                    <ul class="view-check">
 				                    <li><a href="#">view cart</a></li>
 				                    <li><a href="#">checkout</a></li>
 				                </ul>
 		                    </div>
-		                    <div class="search">
+		                    <form class="search">
 		                        <input type="text" value="Search" />
 		                        <input class="f-right" type="submit" value="" />
-		                    </div>
+		                    </form>
 						</div>
-		                <div class="yellow-banner">
-		                    <h2>welcome to surfhouse</h2>
+		                <div class="header-banner">
+		                    <h2>Welcome to surfhouse</h2>
 		                    <p>The only online store you will ever need for all your windsurfing and kitesurfing and SUP needs</p>
 		                </div>
 	                    <div class="slider-header-content">
 	                        <div class="slider-content">
 	                            <h1>JP Funride 2014</h1>
 	                            <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing.</p>
-                                <button class="slider-content-button">Buy now</button>
+                                <button class="button slider-content-button">Buy now</button>
                             </div>
                             <div class="slider-header-arrows">
-	                            <a href="#" class="header-prev-arrow"></a>
-	                            <a href="#" class="header-next-arrow active"></a>
+	                            <button class="header-prev-arrow"></button>
+	                            <button class="header-next-arrow active"></button>
 	                        </div>
                         </div>
                         <form class="slider-header-control">
@@ -151,197 +151,197 @@
 					</aside>
 					<section class="right-column content-column">
 						<section class="shop-products">						
-							<div class="shop">
+							<ul class="shop">
 								<div class="clearfix">
 									<h2 class="f-left">New products</h2>
 									<ul class="shop-slider-arrow f-right">
-										<li><a class="fa fa-angle-left" href="#"></a></li>
-										<li><a class="fa fa-angle-right" href="#"></a></li>
+										<li><button class="fa fa-angle-left"></button></li>
+										<li><button class="fa fa-angle-right"></button></li>
 									</ul>
 								</div>
-								<figure class="shop-item mark">
+								<li class="shop-item mark">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/cart_09.jpg" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
 												<p class="shop-price f-right">865.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item mark mark-hot">
+								</li>
+								<li class="shop-item mark mark-hot">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
-												<p class="shop-price">770.50</p>
+												<p class="shop-price">&#8364;.770.50</p>
 												<p class="shop-price shop-old-price">1,270,15</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Synergy 2mm back zip</p>
 											<div class="f-right">
-												<p class="shop-price">765.00</p>
+												<p class="shop-price">&#8364;.765.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/cart_09.jpg" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Synery 2mm</p>
 											<div class="f-right">
-												<p class="shop-price">230.50</p>
+												<p class="shop-price">&#8364;.230.50</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item mark mark-hot">
+								</li>
+								<li class="shop-item mark mark-hot">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Surf yoke 19 qs</p>
 											<div class="f-right">
-												<p class="shop-price">330.70</p>
+												<p class="shop-price">&#8364;.330.70</p>
 												<p class="shop-price shop-old-price">1,270,15</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-							</div>
+								</li>
+							</ul>
 						</section>
 						<section class="top-products">
-							<div class="shop clearfix">
+							<ul class="shop clearfix">
 								<div class="clearfix">
 									<h2 class="f-left">Top products</h2>
 									<ul class="shop-slider-arrow f-right">
-										<li><a class="fa fa-angle-left" href="#"></a></li>
-										<li><a class="fa fa-angle-right" href="#"></a></li>
+										<li><button class="fa fa-angle-left"></button></li>
+										<li><button class="fa fa-angle-right"></button></li>
 									</ul>
 								</div>
-								<figure class="shop-item mark">
+								<li class="shop-item mark">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/cart_09.jpg" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
 												<p class="shop-price f-right">865.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item mark mark-hot">
+								</li>
+								<li class="shop-item mark mark-hot">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
-												<p class="shop-price">770.50</p>
+												<p class="shop-price">&#8364;.770.50</p>
 												<p class="shop-price shop-old-price">1,270,15</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-							</div>
+								</li>
+							</ul>
 						</section>
 						<section class="sale-products">
-							<div class="shop clearfix">
+							<ul class="shop clearfix">
 								<div class="clearfix">
 									<h2 class="f-left">Sale products</h2>
 									<ul class="shop-slider-arrow f-right">
-										<li><a class="fa fa-angle-left" href="#"></a></li>
-										<li><a class="fa fa-angle-right" href="#"></a></li>
+										<li><button class="fa fa-angle-left"></button></li>
+										<li><button class="fa fa-angle-right"></button></li>
 									</ul>
 								</div>
-								<figure class="shop-item mark">
+								<li class="shop-item mark">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/cart_09.jpg" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
 												<p class="shop-price f-right">865.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item mark mark-hot">
+								</li>
+								<li class="shop-item mark mark-hot">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
-												<p class="shop-price">770.50</p>
+												<p class="shop-price">&#8364;.770.50</p>
 												<p class="shop-price shop-old-price">1,270,15</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-							</div>
+								</li>
+							</ul>
 						</section>
 					</section>
 				</section>
@@ -418,10 +418,10 @@
 					<li class="newsletter">
 						<h4>Newsletter</h4>
 						<p class="footer-text">Join thousanda of other people subscribe to our job.</p>
-						<div class="footer-email">
+						<form class="footer-email">
                             <input type="email" value="Insert Email" />
                             <input type="submit" value="submit" />
-               			 </div>
+               			</form>
 						<ul class="pay-card">
 							<li class="american-express"><a href="#"></a></li>
 							<li class="mastercard"><a href="#"></a></li>
@@ -441,7 +441,7 @@
 			</div>
 			<div class="copyright clearfix">
 				<div class="content">
-					<p class="f-left"><span>&copy; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
+					<p class="f-left"><span>&#169; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
