--- a/shop-cat-gridx3.html
+++ b/shop-cat-gridx3.html
@@ -47,20 +47,20 @@
 			                      	<span class="final-price">$1,459.50</span> 
 			                      	<a href="#">2 items</a>
 			                	</span>
-		                        <ul class="cart-edit f-right">
-		                            <li class="close"><a href="#"></a></li>
-		                            <li><a href="#">edit</a></li>
-		                        </ul>
+		                        <span class="cart-edit f-right">
+		                            <span class="close"><a href="#"></a></span>
+		                            <span><a href="#">edit</a></span>
+		                        </span>
 		                    </div>
 		                    <ul class="view-check">
 			                    <li><a href="#">view cart</a></li>
 			                    <li><a href="#">checkout</a></li>
 			                </ul>
 	                    </div>
-	                    <div class="search">
+	                    <form class="search">
 	                        <input type="text" value="Search" />
 	                        <input class="f-right" type="submit" value="" />
-	                    </div>
+	                    </form>
 					</div>
 				</div>
 			</header>
@@ -150,7 +150,7 @@
 									<option>Position 2</option>
 								</select>
 							</span>
-							<a href="#" class="fa fa-long-arrow-up"></a>
+							<button class="fa fa-long-arrow-up"></button>
 						</div>
 						<div class="view">
 							View as:
@@ -178,208 +178,208 @@
 							</ul>
 						</div>
 					</div>
-					<div class="shop">
-						<figure class="shop-item mark">
+					<ul class="shop">
+						<li class="shop-item mark">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/cart_09.jpg" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Sleeve spring suit</p>
 									<div class="f-right">
 										<p class="shop-price f-right">865.00</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
+						</li>
+						<li class="shop-item mark mark-hot">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Salty dayz</p>
 									<div class="f-right">
-										<p class="shop-price">770.50</p>
+										<p class="shop-price">&#8364;.770.50</p>
 										<p class="shop-price shop-old-price">1,270,15</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Cheeky jane</p>
 									<div class="f-right">
-										<p class="shop-price">280.70</p>
+										<p class="shop-price">&#8364;.280.70</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Synergy 2mm back zip</p>
 									<div class="f-right">
-										<p class="shop-price">765.00</p>
+										<p class="shop-price">&#8364;.765.00</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/cart_09.jpg" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Synery 2mm</p>
 									<div class="f-right">
-										<p class="shop-price">230.50</p>
+										<p class="shop-price">&#8364;.230.50</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
+						</li>
+						<li class="shop-item mark mark-hot">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Surf yoke 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">330.70</p>
+										<p class="shop-price">&#8364;.330.70</p>
 										<p class="shop-price shop-old-price">1,270,15</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Oq scallop solid</p>
 										<div class="f-right">
-										<p class="shop-price">765.00</p>
+										<p class="shop-price">&#8364;.765.00</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">230.50</p>
+										<p class="shop-price">&#8364;.230.50</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Yoke 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">1.130.70</p>
+										<p class="shop-price">&#8364;.1.130.70</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-							</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Oq scallop solid</p>
 									<div class="f-right">
-										<p class="shop-price">765.00</p>
+										<p class="shop-price">&#8364;.765.00</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
+						</li>
+						<li class="shop-item mark mark-hot">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">230.50</p>
+										<p class="shop-price">&#8364;.230.50</p>
 										<p class="shop-price shop-old-price">1,270,15</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item mark">
+						</li>
+						<li class="shop-item mark">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Yoke 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">1.130.70</p>
+										<p class="shop-price">&#8364;.1.130.70</p>
 										<p class="shop-price shop-old-price">1,270,15</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
+						</li>
+						<li class="shop-item mark mark-hot">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Oq scallop solid</p>
 									<div class="f-right">
-										<p class="shop-price">765.00</p>
+										<p class="shop-price">&#8364;.765.00</p>
 										<p class="shop-price shop-old-price">1,270,15</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">230.50</p>
+										<p class="shop-price">&#8364;.230.50</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-						<figure class="shop-item">
+						</li>
+						<li class="shop-item">
 							<a href="#">
-								<span class="shop-item-img">
+								<div class="shop-item-img">
 									<img src="img/" alt="some image" />
-								</span>
-								<figcuption>
+								</div>
+								<div class="shop-item-description">
 									<p class="goods-name f-left">Yoke 19 qs</p>
 									<div class="f-right">
-										<p class="shop-price">1.130.70</p>
+										<p class="shop-price">&#8364;.1.130.70</p>
 									</div>
-								</figcuption>
+								</div>
 							</a>
-						</figure>
-					</div>
+						</li>
+					</ul>
 					<div class="filter clearfix">
 						<div class="sort-by">
 							Sort by
@@ -389,7 +389,7 @@
 									<option>Position 2</option>
 								</select>
 							</span>
-							<a href="#" class="fa fa-long-arrow-up"></a>
+							<button class="fa fa-long-arrow-up"></button>
 						</div>
 						<div class="view">
 							View as:
@@ -469,10 +469,10 @@
 					<li class="newsletter">
 						<h4>Newsletter</h4>
 						<p class="footer-text">Join thousanda of other people subscribe to our job.</p>
-						<div class="footer-email">
+						<form class="footer-email">
                             <input type="email" value="Insert Email" />
                             <input type="submit" value="submit" />
-               			 </div>
+               			</form>
 						<ul class="pay-card">
 							<li class="american-express"><a href="#"></a></li>
 							<li class="mastercard"><a href="#"></a></li>
@@ -492,7 +492,7 @@
 			</div>
 			<div class="copyright clearfix">
 				<div class="content">
-					<p class="f-left"><span>&copy; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
+					<p class="f-left"><span>&#169; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
