--- a/productpage.html
+++ b/productpage.html
@@ -47,20 +47,20 @@
 			                      	<span class="final-price">$1,459.50</span> 
 			                      	<a href="#">2 items</a>
 			                	</span>
-		                        <ul class="cart-edit f-right">
-		                            <li class="close"><a href="#"></a></li>
-		                            <li><a href="#">edit</a></li>
-		                        </ul>
+		                        <span class="cart-edit f-right">
+		                            <span class="close"><a href="#"></a></span>
+		                            <span><a href="#">edit</a></span>
+		                        </span>
 		                    </div>
 		                    <ul class="view-check">
 			                    <li><a href="#">view cart</a></li>
 			                    <li><a href="#">checkout</a></li>
 			                </ul>
 	                    </div>
-	                    <div class="search">
+	                    <form class="search">
 	                        <input type="text" value="Search">
 	                        <input class="f-right" type="submit" value="" />
-	                    </div>
+	                    </form>
 					</div>
 				</div>
 			</header>
@@ -188,17 +188,15 @@
 				        <div class="product-descriptions">
 				        	<div class="product-name">
 					        	<h1>PEEKY CROPPED</h1>
-					        	<p>
-					        		<span class="stars"></span>
-					        		<span class="reviews">
-					        			<span class="reviews-value">1</span>
+					        	<span class="stars"></span>
+					        	<span class="reviews">
+					        		<span class="reviews-value">1</span>
 					        			Review(s)
 					        		</span>
-					        		<span class="rewiews-add">Add Your Review</span>
-					        	</p>				      
+					        	<span class="rewiews-add">Add Your Review</span>				      
 				        	</div>  
 				        	<div class="product-price-code">
-				        		<p class="shop-price">578.50</p>
+				        		<p class="shop-price">&#8364;.578.50</p>
 				        		<div class="product-code-availability">
 				        			<p>Product code: <span>257</span></p>
 				        			<p>Availability: <span>In stock</span></p>
@@ -212,66 +210,62 @@
 				        	<div class="line"></div>
 				        	<div class="product-size-length">
 				        		<h2>Size</h2>
-				        		<form>
-				        			<label for="size-25" class="product-radio">
-                                       	<input id="size-25" name="size" type="radio" value="25" />
-                                       	<span>25</span>
-                                    </label>
-				        			<label for="size-26" class="product-radio">
-                                       	<input id="size-26" name="size" type="radio" value="26" checked />
-                                       	<span>26</span>
-                                    </label>
-				        			<label for="size-27" class="product-radio">
-                                       	<input id="size-27" name="size" type="radio" value="27" />
-                                       	<span>27</span>
-                                    </label>
-				        			<label for="size-28" class="product-radio">
-                                       	<input id="size-28" name="size" type="radio" value="28" />
-                                       	<span>28</span>
-                                    </label>
-				        			<label for="size-29" class="product-radio">
-                                       	<input id="size-29" name="size" type="radio" value="29" />
-                                       	<span>29</span>
-                                    </label>
-				        			<label for="size-30" class="product-radio">
-                                       	<input id="size-30" name="size" type="radio" value="30" />
-                                       	<span>30</span>
-                                    </label>
-				        			<label for="size-31" class="product-radio">
-                                       	<input id="size-31" name="size" type="radio" value="31" />
-                                       	<span>31</span>
-                                    </label>
-				        			<label for="size-32" class="product-radio">
-                                       	<input id="size-32" name="size" type="radio" value="32" />
-                                       	<span>32</span>
-                                    </label>
-				        			<label for="size-33" class="product-radio">
-                                       	<input id="size-33" name="size" type="radio" value="33" />
-                                       	<span>33</span>
-                                    </label>
-				        		</form>
+				        		<label for="size-25" class="product-radio">
+                                   	<input id="size-25" name="size" type="radio" value="25" />
+                                   	<span>25</span>
+                                </label>
+				        		<label for="size-26" class="product-radio">
+                                   	<input id="size-26" name="size" type="radio" value="26" checked />
+                                   	<span>26</span>
+                                </label>
+				        		<label for="size-27" class="product-radio">
+                                   	<input id="size-27" name="size" type="radio" value="27" />
+                                   	<span>27</span>
+                                </label>
+				        		<label for="size-28" class="product-radio">
+                                   	<input id="size-28" name="size" type="radio" value="28" />
+                                   	<span>28</span>
+                                </label>
+				        		<label for="size-29" class="product-radio">
+                                   	<input id="size-29" name="size" type="radio" value="29" />
+                                   	<span>29</span>
+                                </label>
+				        		<label for="size-30" class="product-radio">
+                                   	<input id="size-30" name="size" type="radio" value="30" />
+                                   	<span>30</span>
+                                </label>
+				        		<label for="size-31" class="product-radio">
+                                   	<input id="size-31" name="size" type="radio" value="31" />
+                                   	<span>31</span>
+                                </label>
+				        		<label for="size-32" class="product-radio">
+                                   	<input id="size-32" name="size" type="radio" value="32" />
+                                   	<span>32</span>
+                                </label>
+				        		<label for="size-33" class="product-radio">
+                                   	<input id="size-33" name="size" type="radio" value="33" />
+                                   	<span>33</span>
+                                </label>
 				        	</div>
 				        	<div class="line"></div>
 				        	<div class="product-size-length">
 				        		<h2>Length</h2>
-				        		<form>
-				        			<label for="length-32" class="product-radio">
-                                        <input id="length-32" name="length" type="radio" value="32" />
-                                        <span>32</span>
-                                   	</label>
-				        			<label for="length-34" class="product-radio">
-                                      	<input id="length-34" name="length" type="radio" value="34" />
-                                      	<span>34</span>
-                                   	</label>
-				        		</form>
+				        		<label for="length-32" class="product-radio">
+                                    <input id="length-32" name="length" type="radio" value="32" />
+                                    <span>32</span>
+                                </label>
+				        		<label for="length-34" class="product-radio">
+                                   	<input id="length-34" name="length" type="radio" value="34" />
+                                   	<span>34</span>
+                                </label>
 				        	</div>
 				        	<div class="line"></div>
 				        	<div class="product-add clearfix">
-				        		<form class="product-quantity f-left">
+				        		<div class="product-quantity f-left">
 				        			<p>Quantity:</p>
 			                	    <input type="text" value="1" />
 			                    	<button class="product-quantity-add">+</button>
-			                	</form>
+			                	</div>
 			                	<button class="product-button-add f-left">Add to cart</button>
 			                	<ul class="add-list f-right">
 			                		<li><a href="#">Add to Wishlist</a></li>
@@ -315,126 +309,126 @@
 					<div class="shop clearfix">
 						<section class="also-like">
 							<h2>You might also like</h2>
-							<div class="coloring-slider">
-								<figure class="shop-item mark">
+							<ul class="coloring-slider">
+								<li class="shop-item mark">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/cart_09.jpg" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
 												<p class="shop-price f-right">865.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item mark mark-hot">
+								</li>
+								<li class="shop-item mark mark-hot">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
-												<p class="shop-price">770.50</p>
+												<p class="shop-price">&#8364;.770.50</p>
 												<p class="shop-price shop-old-price">1,270,15</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
+								</li>
 								<div class="coloring-slider-arrow">
 				                	<button class="coloring-slider-prev"></button>
 				                	<button class="coloring-slider-next"></button>
 				              	</div>
-							</div>
+							</ul>
 						</section>
 						<section class="recently-viewed">
 							<h2>Recently viewed</h2>
-							<div class="coloring-slider">
-								<figure class="shop-item">
+							<ul class="coloring-slider">
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Oq scallop solid</p>
 												<div class="f-right">
-												<p class="shop-price">765.00</p>
+												<p class="shop-price">&#8364;.765.00</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Stripe 19 qs</p>
 											<div class="f-right">
-												<p class="shop-price">230.50</p>
+												<p class="shop-price">&#8364;.230.50</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
-								<figure class="shop-item">
+								</li>
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Yoke 19 qs</p>
 											<div class="f-right">
-												<p class="shop-price">1.130.70</p>
+												<p class="shop-price">&#8364;.1.130.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>	
-								<figure class="shop-item">
+								</li>	
+								<li class="shop-item">
 									<a href="#">
-										<span class="shop-item-img">
+										<div class="shop-item-img">
 											<img src="img/" alt="some image" />
-										</span>
-										<figcuption>
+										</div>
+										<div class="shop-item-description">
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
-												<p class="shop-price">280.70</p>
+												<p class="shop-price">&#8364;.280.70</p>
 											</div>
-										</figcuption>
+										</div>
 									</a>
-								</figure>
+								</li>
 								<div class="coloring-slider-arrow">
 				                	<button class="coloring-slider-prev"></button>
 				                	<button class="coloring-slider-next"></button>
 				              	</div>
-							</div>
+							</ul>
 						</section>					
 					</div>
 				</section>
@@ -489,10 +483,10 @@
 					<li class="newsletter">
 						<h4>Newsletter</h4>
 						<p class="footer-text">Join thousanda of other people subscribe to our job.</p>
-						<div class="footer-email">
+						<form class="footer-email">
                             <input type="email" value="Insert Email" />
                             <input type="submit" value="submit" />
-               			 </div>
+               			</form>
 						<ul class="pay-card">
 							<li class="american-express"><a href="#"></a></li>
 							<li class="mastercard"><a href="#"></a></li>
@@ -512,7 +506,7 @@
 			</div>
 			<div class="copyright clearfix">
 				<div class="content">
-					<p class="f-left"><span>&copy; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
+					<p class="f-left"><span>&#169; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
